--- a/study-memory/src/app/record-and-display/record-and-display.component.html
+++ b/study-memory/src/app/record-and-display/record-and-display.component.html
@@ -1,21 +1,33 @@
+<header class="main-toolbar">
+    <button class="logo-button" routerLink="/home">
+        <img src="./../../assets/title_logo.png" class="title-logo">
+    </button>
+    <span class="spacer"></span>
+    <button mat-icon-button color="primary">
+        <mat-icon>person</mat-icon>
+    </button>
+</header>
 <div class="wrapper">
-    <div class="column button-and-log">
-        <div class="stamping-buttons">
-            <mat-toolbar></mat-toolbar>
-            <button mat-raised-button color="primary">開始</button>
-            <button mat-raised-button color="accent">終了</button>
-        </div>
-        <div class="log-display">
-            <mat-toolbar></mat-toolbar>
-            <li>log...</li>
-            <li>log...</li>
-        </div>
-    </div>
     <div class="column watch-record-tabs">
-        <mat-tab-group>
-            <mat-tab label="First"> Content 1 </mat-tab>
-            <mat-tab label="Second"> Content 2 </mat-tab>
-            <mat-tab label="Third"> Content 3 </mat-tab>
+        <mat-tab-group mat-align-tabs="center" color="primary">
+            <mat-tab label="管理と編集"><app-report-calendar></app-report-calendar></mat-tab>
+            <mat-tab label="グラフ"><app-report-graph></app-report-graph></mat-tab>
         </mat-tab-group>
+    </div>
+    <div class="column button-and-log">
+        <div class="stamping-button-field">
+            <mat-toolbar class="title-bar" color="accent">{{today | date: "yyyy年MM月dd日"}}({{dayOfWeekJP[today.getDay()]}})</mat-toolbar>
+            <div class="select-subject-field">
+                <select class="form-control form-control-sm">
+                    <option value="">--科目を選択--</option>
+                </select>
+                <button mat-icon-button class="add-button" color="primary">
+                    <mat-icon>add</mat-icon>
+                </button>
+            </div>
+            <button mat-raised-button class="stamping-button" color="primary">開始</button>
+            <button mat-raised-button class="stamping-button" color="warn">終了</button>
+            <input type="text" class="form-control" placeholder="メモを入力できます" aria-label="Username" aria-describedby="basic-addon1">
+        </div>
     </div>
 </div>
