コンポーネントの名前を変更しました

--- a/study-memory/src/app/record-and-display/record-and-display.component.html
+++ b/study-memory/src/app/record-and-display/record-and-display.component.html
@@ -10,8 +10,8 @@
 <div class="wrapper">
     <div class="column watch-record-tabs">
         <mat-tab-group mat-align-tabs="center" color="primary">
-            <mat-tab label="管理と編集"><app-report-calendar></app-report-calendar></mat-tab>
-            <mat-tab label="グラフ"><app-report-graph></app-report-graph></mat-tab>
+            <mat-tab label="管理と編集"><app-record-calendar></app-record-calendar></mat-tab>
+            <mat-tab label="グラフ"><app-record-graph></app-record-graph></mat-tab>
         </mat-tab-group>
     </div>
     <div class="column button-and-log">
