--- a/study-memory/src/app/tab-item/record-calendar/record-calendar.component.css
+++ b/study-memory/src/app/tab-item/record-calendar/record-calendar.component.css
@@ -2,7 +2,7 @@
     height: 30px;
 }
 
-.report-calendar{
+.record-calendar{
     width: 100%;
     border: 1px solid rgba(0,0,0,0.1);
     font-size: x-small;
@@ -10,11 +10,11 @@
     margin-bottom: 10px;
 }
 
-.report-calendar .date, .start, .stop{
+.record-calendar .date, .start, .stop{
     width: 80px;
 }
 
-.report-calendar .subject{
+.record-calendar .subject{
     width: 160px;
 }
 
@@ -35,3 +35,5 @@
 .month-change-button-field :hover{
     color: rgba(220,220,220,1);
 }
+
+ 
