--- a/study-memory/src/app/tab-item/record-graph/record-graph.component.html
+++ b/study-memory/src/app/tab-item/record-graph/record-graph.component.html
@@ -1,3 +1,3 @@
-<div class="report-calendar-field">
+<div class="record-calendar-field">
     <mat-toolbar class="title-bar" color="accent"></mat-toolbar>
 </div>
