ログイン画面とサインアップ画面を追加

--- a/study-memory/src/app/record-and-display/record-and-display.component.html
+++ b/study-memory/src/app/record-and-display/record-and-display.component.html
@@ -1,5 +1,5 @@
 <header class="main-toolbar">
-    <button class="logo-button" routerLink="/home">
+    <button class="logo-button" (click)="reload()">
         <img src="./../../assets/title_logo.png" class="title-logo">
     </button>
     <span class="spacer"></span>
