--- a/study-memory/src/styles.scss
+++ b/study-memory/src/styles.scss
@@ -21,3 +21,26 @@ $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+button[mat-icon-button]{
+    $small-size-button: 24px;
+    $small-size-icon: 18px;
+
+        &.icon-button-small {
+        width: $small-size-button;
+        height: $small-size-button;
+        line-height: $small-size-button;
+        .mat-icon {
+        font-size: $small-size-icon;
+        width: $small-size-icon;
+        height: $small-size-icon;
+        line-height: $small-size-icon;
+        }
+        .mat-button-ripple {
+        font-size: inherit;
+        width: inherit;
+        height: inherit;
+        line-height: inherit;
+        }   
+    }
+}
