--- a/study-memory/src/app/signup-form/signup-form.component.css
+++ b/study-memory/src/app/signup-form/signup-form.component.css
@@ -1,6 +1,6 @@
 .main{
     position: relative;
-    top: 15%;
+    top: 10%;
 }
 
 .signup-form {
@@ -11,12 +11,13 @@
     padding: 20px 20px 40px 20px;
 }
 
-.signup-form .logo-field{
-    text-align: center;
-}
-
 .signup-form .title-logo{
     height: 50px;
+}
+
+.signup-form mat-form-field{
+    width: 80%;
+    margin: 5px;
 }
 
 .signup-form h1{
@@ -27,21 +28,8 @@
     color: gray;
 }
 
-.signup-form .input-label{
-    margin-left: 35px;
-}
-
-.signup-form .signup-button{
-    text-align: center;
-}
-
-.signup-form input{
-    margin: 10px auto;
-    width: 80%;
-}
-
 .signup-form button{
-    margin: 20px 0 0 0;
+    margin-top: 10px;
     width: 80%;
 }
 
@@ -53,7 +41,6 @@
 .social-signup-buttons-field .social-signup-button{
     padding: 0;
     border: none;
-    border-radius: 5px;
     margin-top: 10px;
     background-color: #4285F4;
     padding: 2px;
