--- a/study-memory/src/app/login-form/login-form.component.html
+++ b/study-memory/src/app/login-form/login-form.component.html
@@ -12,7 +12,15 @@
             </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>パスワード</mat-label>
-                <input matInput type="text" [formControl]="password">
+                <input matInput [type]="hide ? 'password' : 'text'"
+                [formControl]="password">
+                <button mat-icon-button
+                matSuffix
+                (click)="hide = !hide"
+                [attr.aria-label]="'Hide password'"
+                [attr.aria-pressed]="hide">
+                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                 </button>
                 <mat-error *ngIf="password.invalid">{{getPasswordErrorMessage()}}</mat-error>
             </mat-form-field>
         </div>
