google ログイン実装　エラーあり

--- a/study-memory/src/app/login-form/login-form.component.html
+++ b/study-memory/src/app/login-form/login-form.component.html
@@ -30,7 +30,7 @@
         <br>
         <div class="social-login-buttons-field">
             または<br>
-            <button mat-raised-button class="social-login-button">
+            <button mat-raised-button class="social-login-button" (click)="googleLogin()">
                 <img src="./../../assets/btn_google_dark_normal_ios.svg">
                 <span class="login-literal">Googleアカウントで続ける</span>
             </button>
