--- a/study-memory/src/app/signup-form/signup-form.component.html
+++ b/study-memory/src/app/signup-form/signup-form.component.html
@@ -34,7 +34,7 @@
             <br>
         </div>
     </div>
-    <div class="signup-link">
+    <div class="login-link">
         アカウントをお持ちの場合<br>
         <a routerLink="/login">ログイン</a>
     </div>
