--- a/study-memory/src/app/tab-item/record-graph/record-graph.component.html
+++ b/study-memory/src/app/tab-item/record-graph/record-graph.component.html
@@ -9,6 +9,7 @@
             <mat-icon>refresh</mat-icon>
         </button>
     </mat-toolbar><br>
+    {{graphTitle}}
     <div>
         <canvas baseChart
         [datasets]="graphService.barChartDataDate"
